--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 </nav>
 
 <h1>This webpage is in progress!</h1>
+<img src="./watersampling.jpg" class="img-fluid" alt="Water Sampling">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
