--- a/news.html
+++ b/news.html
@@ -3,23 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ethan Sontarp's Personal Website</title>
+    <title>News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-    <img src="PersonalLogo.svg" width="60" height="30" alt="">
-    </a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-         <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Home</a>
         <li>
         <li class="nav-item">
           <a class="nav-link" href="#">Research</a>
@@ -28,8 +26,20 @@
           <a class="nav-link" href="#">Creative</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
+          <a class="nav-link active" aria-current="page" href="#">News</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
@@ -41,19 +51,11 @@
   </div>
 </nav>
 
+
 <div class="container-fluid">
-<div class="container text-left">
-  <div class="row">
-    <div class="col">
-       <img src="./watersampling.jpg" class="img-fluid" alt="Water Sampling">
-    </div>
-    <div class="col">
-      <img src="./PersonalLogoName.svg" class="img-fluid" alt="Personal Logo Expanded">
-      <h4>PhD Student, Environmental Science & Engineering</h2>
-      <h5>About Me</h3>
-      <fs-1">I am a first-year PhD Student in Environmental Science & Engineering at Harvard University. I am a member of the Biogeochemistry of Global Contaminants Group, headed by Professor Elsie Sunderland.</fs-1>
-    </div>
-  </div>
+  <h1 class="text-danger">This webpage is in progress!</h1>
+  <h1>Ethan Sontarp</h1>
+  <h2>PhD Student, Environmental Science & Engineering</h2>
 </div>
 
 
