--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
          <a class="nav-link active" aria-current="page" href="#">Home</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Research</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/research.html">Research</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Creative</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/creative.html">Creative</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/news.html">News</a>
         </li>
           </ul>
         </li>
@@ -40,22 +40,38 @@
     </div>
   </div>
 </nav>
-
+<br></br>
 <div class="container-fluid">
-<div class="container text-left">
+<div class="container text-center">
   <div class="row">
-    <div class="col">
-       <img src="./watersampling.jpg" class="img-fluid" alt="Water Sampling">
+    <div class="col-4">
+       <img src="./wateroutside.heic" class="img-thumbnail" alt="Outside Headshot">
     </div>
-    <div class="col">
-      <img src="./PersonalLogoName.svg" class="img-fluid" alt="Personal Logo Expanded">
-      <h4>PhD Student, Environmental Science & Engineering</h2>
-      <h5>About Me</h3>
-      <fs-1">I am a first-year PhD Student in Environmental Science & Engineering at Harvard University. I am a member of the Biogeochemistry of Global Contaminants Group, headed by Professor Elsie Sunderland.</fs-1>
-    </div>
+    <div class="col-8">
+      <img src="./PersonalLogoName.svg" style="max-width:60%;" class="img-fluid" alt="Personal Logo Expanded">
+	<h4>PhD Student, Environmental Science & Engineering</h2>
+<br></br>
+      <div class="col text-start">
+	<h5>About Me</h3>
+      <fs-1">Welcome! I am a first-year PhD student in Environmental Science & Engineering at Harvard University, where I will be studying persistent organic pollutants in environmental systems. My research will focus on a class of contaminants known as PFAS (per- and polyfluoroalkyl substances), which are broadly distributed, difficult to remediate, and create concern for ecological and human health. I am a member of the <a href="https://bgc.seas.harvard.edu" class="text-reset">Biogeochemistry of Global Contaminants Group</a>, headed by Professor Elsie Sunderland.</fs-1> 
+<br></br>
+<fs-1">Outside of science, I am passionate about mentorship and art. A long-term goal of mine is to do some science illustration.</fs-1>
+<br></br>
+</div>
+<!-- LinkedIn -->
+<a class="btn btn-outline-light" style="background-color: #0a66c2;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://www.linkedin.com/in/ethan-sontarp-84a259249" role="button">LinkedIn</a>
+
+<!-- Scholar -->
+<a class="btn btn-outline-light" style="background-color: #4285F4;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://scholar.google.com/citations?user=jlytuncAAAAJ&hl=en&authuser=2&oi=ao" role="button">Scholar</a>
+
+<!-- GitHub -->
+<a class="btn btn-outline-light" style="background-color: #2b3137;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://github.com/ethansontarp" role="button">GitHub</a>
+
+<!-- Instagram -->
+<a class="btn btn-outline-light" style="background-color: #e1306c;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://www.instagram.com/paintertarp/" role="button">Instagram</a>
+ </div>
   </div>
 </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
