--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-4">
-       <img src="./wateroutside.heic" class="img-thumbnail" alt="Outside Headshot">
+       <img src="./wateroutside.heic" class="img-fluid" alt="Outside Headshot">
     </div>
     <div class="col-8">
       <img src="./PersonalLogoName.svg" style="max-width:60%;" class="img-fluid" alt="Personal Logo Expanded">
@@ -55,17 +55,23 @@
 	<h5>About Me</h3>
       <fs-1">Welcome! I am a first-year PhD student in Environmental Science & Engineering at Harvard University, where I will be studying persistent organic pollutants in environmental systems. My research will focus on a class of contaminants known as PFAS (per- and polyfluoroalkyl substances), which are broadly distributed, difficult to remediate, and create concern for ecological and human health. I am a member of the <a href="https://bgc.seas.harvard.edu" class="text-reset">Biogeochemistry of Global Contaminants Group</a>, headed by Professor Elsie Sunderland.</fs-1> 
 <br></br>
-<fs-1">Outside of science, I am passionate about mentorship and art. A long-term goal of mine is to do some science illustration.</fs-1>
+<fs-1">Outside of science, I am passionate about mentorship and art. Check out my 'Research' page for descriptions of some recent projects, the 'Creative' page for the painting and graphic design portfolios I am curating, and the 'News' page for any updates (and potentially a mini-blog).</fs-1>
 <br></br>
 </div>
 <!-- LinkedIn -->
-<a class="btn btn-outline-light" style="background-color: #0a66c2;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://www.linkedin.com/in/ethan-sontarp-84a259249" role="button">LinkedIn</a>
+<a href="#" title="LinkedIn" class="btn btn-linkedin btn-lg"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
+<a class="btn btn-linkedin btn-outline-light"<i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
+
+style="background-color: #0a66c2;" style"color: "FFFFFF;" href="https://www.linkedin.com/in/ethan-sontarp-84a259249" role="button"><i class="fa fa-linkedin-square"></i></a>
 
 <!-- Scholar -->
 <a class="btn btn-outline-light" style="background-color: #4285F4;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://scholar.google.com/citations?user=jlytuncAAAAJ&hl=en&authuser=2&oi=ao" role="button">Scholar</a>
 
 <!-- GitHub -->
 <a class="btn btn-outline-light" style="background-color: #2b3137;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://github.com/ethansontarp" role="button">GitHub</a>
+
+<!-- ORCID -->
+<a class="btn btn-outline-light" style="background-color: #A6CE39;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://orcid.org/my-orcid?orcid=0000-0001-7945-7887" role="button">ORCID</a>
 
 <!-- Instagram -->
 <a class="btn btn-outline-light" style="background-color: #e1306c;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://www.instagram.com/paintertarp/" role="button">Instagram</a>
