--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
 <br></br>
 </div>
 <!-- LinkedIn -->
-<a href="#" title="LinkedIn" class="btn btn-linkedin btn-lg"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
-<a class="btn btn-linkedin btn-outline-light"<i class="fa fa-linkedin fa-fw"></i> LinkedIn</a>
-
-style="background-color: #0a66c2;" style"color: "FFFFFF;" href="https://www.linkedin.com/in/ethan-sontarp-84a259249" role="button"><i class="fa fa-linkedin-square"></i></a>
+<a class="btn btn-outline-light" style="background-color: #0a66c2;" style"color: "FFFFFF;" href="https://www.linkedin.com/in/ethan-sontarp-84a259249" role="button">LinkedIn</a>
 
 <!-- Scholar -->
 <a class="btn btn-outline-light" style="background-color: #4285F4;" style"color: "FFFFFF;" class="fab fa-facebook-f fa-lg" href="https://scholar.google.com/citations?user=jlytuncAAAAJ&hl=en&authuser=2&oi=ao" role="button">Scholar</a>
