--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
 
 <div class="container-fluid">
   <h4 class="text-danger">Projects</h4>
-  <h5> Ion Pairing in Aqueous Solutions </h5>
+  <h5>Molecular Simulations of Ion Pairing in Aqueous Solutions</h5>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -76,29 +76,44 @@
   </a>
 </div>
 
+<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-interval="10000">
+      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item" data-interval="2000">
+      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
   <fs-1><em>Associated publications & presentations</em></fs-1>
-  <div>
+  <br></br>
   <fs-1><strong>Sontarp, E. J.</strong>, Neumann, J., Fenter, P., Lee, S. S., & Bourg, I. C. Molecular Dynamics Simulations of the Electrical Double Layer Formed by Concentrated Alkali Bromide Solutions at the Muscovite-Water Interface. Poster Presentation at 2024 Water and Aqueous Solutions Gordon Research Conference. Holderness, NH. July 24-25, 2024.</fs-1>
-</div>
-
-<div class="container-fluid">
-<div>
-  <h5> Partitioning of Organic Contaminants at the Water-Air Interface </h5>
+<br></br>
+<h5>Partitioning of Organic Contaminants at the Water-Air Interface</h5>
   <fs-1><em>Associated publications & presentations</em></fs-1>
-  <div>
+  <br></br>
   <fs-1>Lemay, A. C.*, <strong>Sontarp, E. J.*</strong>, Martinez, D., Maruri, P., Mohammed, R., Neapole, R., Wiese, M., Willemsen, J. A., & Bourg, I. C. (2023). Molecular Dynamics Simulation Prediction of the Partitioning Constants (K<sub>H</sub>, K<sub>iw</sub>, K<sub>ia</sub>) of 82 Legacy and Emerging Organic Contaminants at the Water–Air Interface. Environmental Science & Technology, 57(15), 6296-6308.                  <strong>* Co-first authors</strong></fs-1>
-<div>
+<br></br>
 <fs-1>Lemay, A.*, <strong>Sontarp, E.*</strong>, Willemsen, J., & Bourg, I. Molecular Dynamics Simulations of Organic Contaminants at the Water-Air Interface. Oral Presentation at American Chemical Society Spring Meeting. San Diego, CA. March 22, 2022.      <strong> * Co-presenters</strong><fs-1>
-</div>
-
-<div class="container-fluid">
-<div>
-  <h5> Impact of Climate on Natural Organic Matter Composition </h5>
+<br></br>
+  <h5>Impact of Climate on Natural Organic Matter Composition</h5>
   <fs-1><em>Associated publications & presentations</em></fs-1>
-  <div>
+  <br></br>
   <fs-1>Duan, J., <strong>Sontarp, E. J.</strong>, & Myneni, S. C. B. (2024). Detecting Structural Environments of Carboxyl Groups in Dissolved Natural Organic Molecules. ACS ES&T Water, 4(2), 555-563.<fs-1>
-<div>
-
+<br></br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
