--- a/news.html
+++ b/news.html
@@ -10,36 +10,26 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+    <img src="PersonalLogo.svg" width="60" height="30" alt="">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+         <a class="nav-link" href="https://ethansontarp.github.io/index.html">Home</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Research</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/research.html">Research</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Creative</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/creative.html">Creative</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">News</a>
+          <a class="nav-link active" aria-current='page' href="#">News</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
@@ -53,11 +43,33 @@
 
 
 <div class="container-fluid">
-  <h1 class="text-danger">This webpage is in progress!</h1>
-  <h1>Ethan Sontarp</h1>
-  <h2>PhD Student, Environmental Science & Engineering</h2>
-</div>
+  <h1 class="text-danger">News</h1>
 
+  <h4>Paper Published in Journal of Physical Chemistry B</h4>
+  <h5>September 10, 2024</h5>
+  <fs-1>A paper containing contributions from my time as an intern at the National Institute of Standards and Technology (NIST) last summer was just published in the Journal of Physical Chemistry B! In particular, I used molecular models to study the interactions of salt ions (Na, F) in aqueous solutions, under the guidance of Dr. Demian Riccardi. These results were then compared to an experimental method for measuring ion pairing with great success. I am so grateful to Dr. Riccardi and NIST for the internship experience and for including my work in the publication.</fs-1>
+<br></br>
+<br></br>
+  <h4>Starting Graduate School!</h4>
+  <h5>September 3, 2024</h5>
+ <fs-1>This fall, I enrolled as a PhD student at Harvard University in the Environmental Science & Engineering program. I will be working in the Biogeochemistry of Global Contaminants group, under Professor Elsie Sunderland. The group broadly studies the interactions of natural and anthropogenic pollutants in environmental systems, and applies tools such as environmental measurements, controlled laboratory studies, and biogeochemical models to issues of ecological and human health. I am excited to pursue new applications of environmental geochemistry, learn diverse skillsets, and connect with people who have scientific passions.</fs-1>
+<br></br>
+<br></br>
+  <h4>Department Trip to Nova Scotia</h4>
+  <h5>August 13-20, 2024</h5>
+<fs-1>Before the fall semester started, I was invited to attend a field trip to Nova Scotia led by graduate students affiliated with the Earth & Planetary Sciences department. The trip was an amazing format to not only learn about interesting geoscience in Eastern Canada, but also to meet the existing and incoming graduate students in my program. Throughout the trip, we did a lot of camping, discussed science we are interested in, and connected through food, games, and long bus rides. It was such a wonderful way to be introduced to graduate school and I’m so lucky to have been able to go.</fs-1> 
+<br></br>
+<br></br>
+  <h4>Gordon Research Conference on Water & Aqueous Solutions</h4>
+  <h5>July 21-26, 2024</h5>
+  <fs-1>In July, I attended the Gordon Research Conference (GRC) on Water and Aqueous Solutions in Holderness, NH. With its specialized atmosphere and more remote setting, I was really able to learn about the inner workings of the subfield – what topics were most interesting to scientists in recent years, new methods, and exciting applications. I particularly enjoyed hearing about how the physicochemical properties of water could be exploited for cryo-preservation, and how studying these properties lead us to better understandings of the potential for life on Jupiter’s moon, Europa. On the last two days of the conference, I presented a poster about my senior thesis research, with some updates from what I was working on over the summer.</fs-1>
+<br></br>
+<br></br>
+  <h4>Graduation</h4>
+  <h5>May 28, 2024</h5>
+  <fs-1> On May 28th, I graduated from Princeton University with my Bachelor’s degree in geosciences and a minor in astrobiology. There is so much I could say about the incredible education I received, the people who mentored me along the way, the friends I connected with, and the opportunities I was able to pursue. All in all, I would just say that I’m so grateful for everything. Although the time I entered college during was in no way easy, I feel like I was really able to make the most out of it. I was challenged, I learned how to learn, and I’m a better person for it.</fs-1>
+<br></br>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
