--- a/research.html
+++ b/research.html
@@ -19,16 +19,16 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-         <a class="nav-link" href="#">Home</a>
+         <a class="nav-link" href="https://ethansontarp.github.io/index.html">Home</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Research</a>
+          <a class="nav-link active" aria-current='page' href="#">Research</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Creative</a>
+          <a class="nav-link" href="https://ethansontarp.github.io/creative.html">Creative</a>
         <li>
         <li class="nav-item">
-          <a class="nav-link" href="#">News</a>
+           <a class="nav-link" href="https://ethansontarp.github.io/news.html">News</a>
         </li>
           </ul>
         </li>
