Update Research Page

--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
 
 <div class="container-fluid">
   <h1 class="text-danger">News</h1>
-
+<div class="col-8">
   <h4>Paper Published in Journal of Physical Chemistry B</h4>
   <h5>September 10, 2024</h5>
   <fs-1>A paper containing contributions from my time as an intern at the National Institute of Standards and Technology (NIST) last summer was just published in the Journal of Physical Chemistry B! In particular, I used molecular models to study the interactions of salt ions (Na, F) in aqueous solutions, under the guidance of Dr. Demian Riccardi. These results were then compared to an experimental method for measuring ion pairing with great success. I am so grateful to Dr. Riccardi and NIST for the internship experience and for including my work in the publication.</fs-1>
