--- a/research.html
+++ b/research.html
@@ -42,64 +42,15 @@
 </nav>
 
 <div class="container-fluid">
-  <h4 class="text-danger">Projects</h4>
+<h1 class="text-danger">Research</h1>
+<div class="col-8">
+  <h4>Projects</h4>
   <h5>Molecular Simulations of Ion Pairing in Aqueous Solutions</h5>
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-30" src="./IonPairing.pdf" alt="First slide">
-	<div class="carousel-caption d-none d-md-block">
-    	<h5>Caption</h5>
-    	<p>Caption</p>
-  </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-50" src="./MolecularModels.svg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-50" src="./EDL.svg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="10000">
-      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./IonPairing.pdf" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 
   <fs-1><em>Associated publications & presentations</em></fs-1>
   <br></br>
+  <fs-1>Musiał, M., Riccardi, D., Suiter, C. L., <strong>Sontarp, E. J.</strong>, Miller, S. L., Lirette, R. L., Rehmeier, K. C., Mahata, A., Muzny, C. D., Stelson, A. C., Schwarz, K. A., & Widegren, J. A. (2024). NMR Spectroscopy and Multiscale Modeling Shed Light on Ion-Solvent Interactions and Ion Pairing in Aqueous NaF Solutions. The Journal of Physical Chemistry B.</fs-1>
+<br></br>
   <fs-1><strong>Sontarp, E. J.</strong>, Neumann, J., Fenter, P., Lee, S. S., & Bourg, I. C. Molecular Dynamics Simulations of the Electrical Double Layer Formed by Concentrated Alkali Bromide Solutions at the Muscovite-Water Interface. Poster Presentation at 2024 Water and Aqueous Solutions Gordon Research Conference. Holderness, NH. July 24-25, 2024.</fs-1>
 <br></br>
 <h5>Partitioning of Organic Contaminants at the Water-Air Interface</h5>
